fixed TMS connect option radio button not visible on smartphone

--- a/src/app/components/report/report.component.css
+++ b/src/app/components/report/report.component.css
@@ -1,16 +1,17 @@
-  .table.summary_table {
+  ::ng-deep .summary_table {
       border-collapse: collapse;
       border: 1px solid silver;
+      width: 20%;
   }
 
-  .table.summary_table td, th, tr {
+  ::ng-deep .summary_table td, th, tr {
       padding: 5px;
       border-collapse: collapse;
       border: 1px solid silver;
       text-align: center;
   }
 
-  .df_table {
+  ::ng-deep .df_table {
       font-size: 11pt;
       font-family: Arial;
       border-collapse: collapse;
@@ -18,15 +19,19 @@
 
   }
 
-  .df_table td, th {
+  ::ng-deep .df_table td, th {
       padding: 5px;
   }
 
-  .df_table tr:nth-child(even) {
+  ::ng-deep .df_table tr:nth-child(even) {
       background: #E0E0E0;
   }
 
-  .df_table tr:hover {
+  ::ng-deep .df_table tr:hover {
       background: silver;
       cursor: pointer;
+  }
+
+  ::ng-deep ul li {
+    list-style-type: disc;
   }
